--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,14 +1,27 @@
+# pull official base image
 FROM python:3.10-slim
 
-ENV FLASK_APP main.py
-ENV FLASK_ENV production
+# install dependencies
+RUN apt-get update && apt-get install -y apt-transport-https && \
+    apt-get install -y libssl-dev libffi-dev gcc python3-dev musl-dev build-essential \
+    libpq-dev netcat-openbsd
 
-COPY requirements.txt ./
+# set environment varibles
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
+
+# set working directory
+WORKDIR /usr/src/app
+
+# add and install requirements
+COPY ./requirements.txt /usr/src/app/requirements.txt
 RUN pip install -r requirements.txt
 
-COPY api api
-COPY migrations migrations
-COPY main.py config.py boot.sh ./
+# # add entrypoint.sh
+# COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
+# RUN chmod +x /usr/src/app/entrypoint.sh
 
-EXPOSE 5000
-CMD ./boot.sh
+# add app
+COPY . /usr/src/app
+
+
