--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,29 @@
-version: "3.3"
+version: '3.7'
 services:
-  # backend:
-  #   image: '${DOCKER_IMAGE_BACKEND?Variable not set}:${TAG-latest}'
-  #   ports:
-  #     - "${BACKEND_API_PORT:-5000}:5000"
-  #   volumes:
-  #     - type: volume
-  #       source: mongodb_data_container
-  #       target: /data
-    
-  #   env_file:
-  #     - .env
-  #   build:
-  #     context: ./backend
-  #     dockerfile: Dockerfile
 
-  # frontend:
-  #   image: '${DOCKER_IMAGE_FRONTEND?Variable not set}:${TAG-latest}'
-  #   ports:
-  #     - 3000:3000
-  #   build:
-  #     context: ./frontend
-  #     args:
-  #       FRONTEND_ENV: ${FRONTEND_ENV-production}
-    
-  mongodb_container:
+  db:
     image: mongo:latest
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: developer
-      MONGO_INITDB_ROOT_PASSWORD: developer
+    container_name: mongodb
     ports:
       - 27017:27017
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=developer
+      - MONGO_INITDB_ROOT_PASSWORD=developer
+      - MONGODB_HOSTNAME=mongodb
     volumes:
       - mongodb_data_container:/data/db
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    volumes:
+      - './frontend:/app'
+      - '/app/node_modules'
+    ports:
+      - 3000:8080
+    environment:
+      - NODE_ENV=development
 
 volumes:
   mongodb_data_container:
