--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,13 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
+    "@popperjs/core": "^2.11.6",
     "axios": "^0.18.0",
+    "bootstrap": "^5.2.3",
+    "bulma": "^0.9.4",
     "core-js": "^3.4.3",
+    "jquery": "^3.6.1",
+    "popper.js": "^1.16.1",
     "register-service-worker": "^1.0.0",
     "typesafe-vuex": "^3.1.1",
     "vee-validate": "^2.1.7",
