backend: edit .env.example

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,9 @@
+MONGODB_DBNAME=db_sor
+MONGODB_HOST=mongodb
+MONGODB_PORT=27017
+MONGODB_USERNAME=developer
+MONGODB_PASSWORD=developer
+
 # A complete list of supported variables is included in the documentation.
 
 # Set to any non-empty value to disable token authentication.
