backend: added search/ endpoint and its view and querysets

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,9 @@ services:
       - ./backend/.env
     depends_on:
       - db
-    restart: always
+    # restart: always
+    stdin_open: true
+    tty: true
 
 
   db:
