--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,7 +14,8 @@ RUN apt-get update && apt-get install -y netcat
 # install dependencies
 RUN pip install --upgrade pip
 COPY ./requirements.txt /usr/src/app/requirements.txt
-RUN pip install -r requirements.txt
+COPY ./dev-requirements.txt /usr/src/app/dev-requirements.txt
+RUN pip install -r dev-requirements.txt
 
 # copy project
 COPY . /usr/src/app/
