--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bulma": "^0.9.4",
     "core-js": "^3.4.3",
     "jquery": "^3.6.1",
+    "moment": "^2.29.4",
     "popper.js": "^1.16.1",
     "register-service-worker": "^1.0.0",
     "typesafe-vuex": "^3.1.1",
