--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,6 +3,7 @@ apispec==6.0.2
 blinker==1.5
 cffi==1.15.1
 click==8.1.3
+coverage==6.5.0
 cryptography==38.0.3
 dnspython==2.2.1
 email-validator==1.3.0
@@ -26,6 +27,7 @@ packaging==21.3
 pycparser==2.21
 pymongo==4.3.3
 pyparsing==3.0.9
+pytest==7.2.0
 python-dotenv==0.21.0
 six==1.16.0
 webargs==8.2.0
