--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,33 @@
 version: '3.7'
 services:
-  backend:
+  service-auth:
+    container_name: service-auth
     build:
-      context: ./backend
+      context: ./backend/service-auth
       dockerfile: Dockerfile
     volumes:
-      - ./backend/:/usr/src/app/
+      - ./backend/service-auth/:/usr/src/app/
     ports:
       - 5000:5000
     env_file:
-      - ./backend/.env
+      - ./backend/service-auth/.env
+    depends_on:
+      - db
+    # restart: always
+    stdin_open: true
+    tty: true
+
+  service-sor:
+    container_name: service-sor
+    build:
+      context: ./backend/service-sor
+      dockerfile: Dockerfile
+    volumes:
+      - ./backend/service-sor/:/usr/src/app/
+    ports:
+      - 5001:5001
+    env_file:
+      - ./backend/service-sor/.env
     depends_on:
       - db
     # restart: always
@@ -30,6 +48,7 @@ services:
       - mongodb_data_container:/data/db
 
   frontend:
+    container_name: frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile
