frontend: filter by service/product name. fixed filtering bug.

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,5 +1,6 @@
 VUE_APP_API_AUTH_URL_DEV=localhost:5000
 VUE_APP_API_SOR_URL_DEV=localhost:5001
+VUE_APP_API_VOR_URL_DEV=localhost:5002
 VUE_APP_API_AUTH_URL_STAG=localhost:5000
 VUE_APP_API_AUTH_URL_PROD=localhost:5000
 VUE_APP_NAME=Project SOR
